# nvd

./: .gitignore  main.py
arduino/: arduino.ino
backend/: main.py  pyproject.toml  server.py  utils.py
backend/backend/: main.py  server.py
frontend/: package-lock.json  package.json
frontend/pages/: _document.js  index.js
frontend/pages/place/: index.js
frontend/pages/return/: [id].js
frontend/pages/returnfin/: index.js
frontend/pages/start/: index.js
frontend/pages/success/: index.js
frontend/pages/wait/: index.js
frontend/service/: backend.js
frontend/styles/: Home.module.css
